# ChangeLog for mail-client/notmuch
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Nov 2009; James Rowe <jnrowe@gmail.com> -files/50notmuch-gentoo.el,
  notmuch-9999.ebuild:
  Switch to autogenerated emacs autoload file.

  30 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  elisp-site-regen wasn't being run with portage due to inherit ordering.

  Thanks to Kevin Norland for reporting this, and encouraging me to test
  with portage more often ;)

  28 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild,
  metadata.xml:
  Added support for installing the vim interface.

  22 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Enabling optional support for debugging.

  21 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Switch to make install, now patches are in upstream.

  21 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Install the desktop entry with USE='X emacs'.

  21 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Install the zsh completion file.

  20 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Install the byte-compiled elisp file.

  20 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  No longer need as-needed fix.  The ddac1734 commit fixes this.

  19 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Keyworded ~x86.

  19 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Don't use make install, because it installs compressed man pages and emacs
  files unconditionally.

*notmuch-9999 (18 Nov 2009)

  18 Nov 2009; James Rowe <jnrowe@gmail.com> +files/50notmuch-gentoo.el,
  +notmuch-9999.ebuild, +metadata.xml:
  Initial ebuild, by me.
