@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD notmuch-9999.ebuild 1889 RMD160 865800f9b39ed9e7dd6dcfac2adba71cd0794c13 SHA1 1580c12e3945e18c9d49180af7841d9020f0d1f5 SHA256 7b037e67b395c54aa309bd901a47a3fddba8b1cae3533eaeff99ca418e9a6bde
-MISC ChangeLog 1750 RMD160 2215fe28ed85be0b520f1838cd9a3e7168d93263 SHA1 876a42974d2f281e9cb5b2fe832da7f4883f29e4 SHA256 68296540432e55211212dd0e2ede168284f693df53d611537942dcd1e41af0c3
+EBUILD notmuch-9999.ebuild 1885 RMD160 43fabc1b06323e83a317247b0e391ddfce4d2615 SHA1 0c977836491c3ba54ff6ccd169b56010fa430f13 SHA256 1867f8e7eb38f4630ce4ede129a7db48e63381f08d7a8c0e58e823b69c7002d0
+MISC ChangeLog 1963 RMD160 ad516e7a823b85c6f8e955e0984e3eafeeecf86b SHA1 d9b92a9d9646710906a10a69de9d72036e8ccffa SHA256 7694ba974e9a8976d49b2a4494ef57300d71ed68d5e86de9fe7d5c613a7f1a08
 MISC metadata.xml 729 RMD160 18bd51c58c69c18b7d865f82d59a8e12ae9d32fb SHA1 0d656385074d1be5f090f920bc02bb54d7d2d79b SHA256 7b64db90b536d4ac51f1f17d5c2e147c757c87c6a1650fc688f7e613b134d628
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksUKCcACgkQzJrj3cAXR0nyAQCeIFiHMrFuPv+j91/i+LItySy1
-EpIAoKTCBVpXeL9g6O9ru7+g4Xu2bmCu
-=/OPt
+iEYEARECAAYFAksVjV8ACgkQzJrj3cAXR0lLUwCfSaWAcMBKXT2rrQmBfkFhXBhW
+gSoAoJplXADCAI/dVS0nzh3mYVSxerKN
+=6xn4
 -----END PGP SIGNATURE-----
