@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Dec 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
+  Manually install bash-completion script. Upstream no longer install it
+  with the default target(since 7c2c26bc), and this works better anyway.
+
   30 Nov 2009; James Rowe <jnrowe@gmail.com> -files/50notmuch-gentoo.el,
   notmuch-9999.ebuild:
   Switch to autogenerated emacs autoload file.
